--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 body {
-    background-image: url("/resources/background.png");
+    background-image: url("./resources/background.png");
     background-size: cover;
     background-repeat: no-repeat;
     top: 0;
