--- a/style.css
+++ b/style.css
@@ -268,6 +268,20 @@ footer {
     width: fit-content;
 }
 
+/* 404 */
+#four-hundred-and-four {
+    margin: auto auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 70vh;
+    height: 40vh;
+    border: 3px solid rgba(148, 211, 255, 0.58);
+    border-radius: 1rem;
+    background-color: rgba(88, 191, 255, 0.42);
+    padding: 1rem;
+}
+
 /* STATS SITE-SPECIFIC ELEMENTS */
 
 /* Not found */
