--- a/style.css
+++ b/style.css
@@ -125,8 +125,10 @@ main > img {
     z-index: 1;
 }
 
+/* playPopup */
+
 #playPopup {
-    width: 40rem;
+    width: 33vw;
     visibility: hidden;
     opacity: 0;
     position: absolute;
@@ -147,6 +149,86 @@ main > img {
 #playPopup > ol > li {
     margin: 1rem;
     font-size: 1.5rem;
+}
+
+/* eventsPopup */
+
+#eventsPopup {
+    width: 45vw;
+    height: 60vh;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border: 3px solid rgba(148, 211, 255, 0.58);
+    border-radius: 1rem;
+    background-color: rgba(29, 102, 140, 0.4);
+    z-index: 2;
+    overflow-y: scroll;
+}
+
+#eventsPopup > h1 {
+    text-align: center;
+    margin: 1rem;
+    text-decoration: underline;
+}
+
+.events > div {
+    margin: 2rem;
+    border: 3px solid rgba(65, 139, 186, 0.7);
+    border-radius: 1rem;
+    background-color: rgba(0, 0, 0, 0.25);
+    padding: 1rem;
+}
+
+.eventName {
+    text-align: center;
+    text-decoration: underline;
+    color: deepskyblue;
+    font-size: 2rem;
+}
+
+.eventDate {
+    text-align: center;
+    color: lightgray;
+    margin-top: 0.2rem;
+}
+
+.eventSeparator {
+    margin: 1rem 0.5rem;
+    color: rgba(42, 169, 255, 0.66);
+    filter: blur(1px);
+}
+
+.eventInfoTitle {
+    color: deepskyblue;
+    margin-bottom: 0.5rem;
+}
+
+.eventInfoText {
+    font-size: 1.15rem;
+}
+
+.eventInfoText > span {
+    color: #6ddbff;
+}
+
+.eventPrize {
+    margin-top: 1rem;
+    padding: 1rem;
+    border: 2px solid rgba(148, 211, 255, 0.58);
+    border-radius: 1rem;
+    background-color: rgba(29, 102, 140, 0.21);
+}
+
+.eventPrizeTitle {
+    color: deepskyblue;
+    margin-bottom: 0.5rem;
+}
+
+.eventPrizeList {
+    font-size: 1.15rem;
 }
 
 li {
