--- a/style.css
+++ b/style.css
@@ -453,6 +453,24 @@ footer {
 
 /* STATS SITE-SPECIFIC ELEMENTS */
 
+/* Loading */
+
+#loading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#loading > img {
+    animation:spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+    0% {transform: scale(0.2) rotate(0deg);}
+    100% {transform: scale(0.2) rotate(360deg);}
+}
+
 /* Not found */
 
 #not-found {
