--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header {
 }
 
 .server-widget {
+    cursor: default;
     position: fixed;
     right: 1rem;
     top: 1rem;
@@ -522,6 +523,7 @@ footer {
 /* Stats */
 
 #stats-container {
+    cursor: default;
     visibility: hidden;
     opacity: 0;
     margin: auto auto;
