--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ main > img {
 /* imprintPopup */
 
 #imprintPopup {
+    cursor: default;
     visibility: hidden;
     opacity: 0;
     position: absolute;
@@ -143,6 +144,7 @@ main > img {
 /* leaderboardPopup */
 
 #leaderboardPopup {
+    cursor: default;
     width: 33vw;
     visibility: hidden;
     opacity: 0;
@@ -171,13 +173,8 @@ main > img {
 
 /* playPopup */
 
-#playPopup > p {
-    font-weight: bold;
-    font-size: 1.5rem;
-    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
-}
-
 #playPopup {
+    cursor: default;
     width: 33vw;
     visibility: hidden;
     opacity: 0;
@@ -188,6 +185,12 @@ main > img {
     border-radius: 1rem;
     background-color: rgba(29, 102, 140, 0.4);
     z-index: 2;
+}
+
+#playPopup > p {
+    font-weight: bold;
+    font-size: 1.5rem;
+    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
 }
 
 #playPopup > h1 {
@@ -206,6 +209,7 @@ main > img {
 /* eventsPopup */
 
 #eventsPopup {
+    cursor: default;
     width: 45vw;
     height: 60vh;
     visibility: hidden;
