--- a/style.css
+++ b/style.css
@@ -158,7 +158,8 @@ main > img {
 
 #leaderboardPopup {
     cursor: default;
-    width: 33vw;
+    width: 70vw;
+    height: 75vh;
     visibility: hidden;
     opacity: 0;
     position: absolute;
@@ -167,6 +168,7 @@ main > img {
     border: 3px solid rgba(148, 211, 255, 0.58);
     border-radius: 1rem;
     background-color: rgba(29, 102, 140, 0.4);
+    overflow-y: scroll;
     z-index: 2;
 }
 
@@ -677,4 +679,27 @@ header {
     position: absolute;
     left: 50%;
     transform: translateX(-50%) scale(0.8);
+}
+
+/* Leaderboard */
+
+table {
+    width: 90%;
+    margin: 0 auto 2rem auto;
+    text-align: center;
+    font-size: 130%;
+    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
+    border: 2px solid rgba(148, 211, 255, 0.58);
+    border-radius: 1rem;
+    background: rgba(88, 191, 255, 0.25);
+    padding: 1rem;
+}
+
+th, tr, td {
+    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
+}
+
+th {
+    padding-bottom: 0.5rem;
+    text-decoration: underline;
 }
