use webp instead of png

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html, body {
 }
 
 body {
-    background-image: url("./resources/background.png");
+    background-image: url("resources/background.webp");
     background-size: cover;
     background-repeat: repeat;
     top: 0;
