--- a/style.css
+++ b/style.css
@@ -434,6 +434,10 @@ footer {
     filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
 }
 
+.links-wrapper > a:hover {
+    text-decoration: underline;
+}
+
 /* Socials */
 
 .socials-wrapper {
